--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h2>Get In Touch</h2>
     <img class="peepbike" src="peepbike.png" alt="bike">
     <h3>How about making a friend ? </h3>
-    <p class="contactmes">Do you want to surf with me? An friendly email is always welcomed ^^ </p>
+    <p class="contactmes">Do you want to surf with me? A friendly email is always welcomed ^^ </p>
     <a class="btn" href="mailto:Lixiao00lloo@gmail.com">CONTACT ME</a>
   </div>
 </div>
